<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewEvent">

    <TextView
        android:id="@+id/event_name_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/event_name_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/event_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/event_name_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_name_lbl" />

    <TextView
        android:id="@+id/event_type_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/event_type_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_name_txt" />

    <Spinner
        android:id="@+id/event_type_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_type_lbl" />

    <TextView
        android:id="@+id/event_start_date_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/event_start_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_type_txt" />

    <EditText
        android:id="@+id/event_start_date_txt"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        android:maxLines="1"
        android:hint="@string/event_start_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_start_date_lbl" />

    <TextView
        android:id="@+id/event_end_date_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/event_end_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_start_date_txt" />

    <EditText
        android:id="@+id/event_end_date_txt"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        android:maxLines="1"
        android:hint="@string/event_end_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_end_date_lbl" />

    <TextView
        android:id="@+id/event_duration_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/event_duration_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_end_date_txt" />

    <Switch
        android:id="@+id/event_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_duration_lbl" />

    <TextView
        android:id="@+id/event_description_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/event_description_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_duration" />

    <EditText
        android:id="@+id/event_description_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/event_description_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_description_lbl" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/btn_save_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_description_txt" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:text="@string/btn_cancel_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_description_txt" />


</androidx.constraintlayout.widget.ConstraintLayout>